# masterthesis_training_pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run_all_cl_experiments.sh  ssh_32035225.json
configs/: config.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml  verbose.yaml
configs/data/: default.yaml  precomputed_features.yaml
configs/data_settings/: default.yaml  permuted_mnist.yaml  split_cifar100.yaml
configs/debug/: default.yaml
configs/experiment/: ac_hope_vit.yaml.old  ac_hope_vit_depth_matched.yaml  ac_hope_vit_param_matched.yaml  baseline_convlstm.yaml  cl_ac_hope.yaml  cl_ac_hope_phase1.yaml  cl_ac_hope_phase10_replay.yaml  cl_ac_hope_phase11_dnh.yaml  cl_ac_hope_phase2.yaml  cl_ac_hope_phase3.yaml  cl_ac_hope_phase4.yaml  cl_ac_hope_phase5.yaml  cl_ac_hope_phase6.yaml  cl_ac_hope_phase7.yaml  cl_ac_hope_phase8_hybrid.yaml  cl_ac_hope_phase9.yaml  cl_ac_vit.yaml  cl_cross_validation.yaml  cl_gated_delta_net.yaml  cl_lower_bound.yaml  cl_permuted_mnist.yaml  cl_retnet.yaml  cl_split_cifar100.yaml  (+11 more)
docs/: 20260116_training_settings_ViT_Predcitor.md  20260121_rollout_3_context_frames_protocol.md  20260126_Detailed_test_ac_predictor_flow.md  20260126_ac_predictor_architecture.md  20260126_vjepa2_patch_correspondence_analysis.md  20260130_possible_Baseline.md  20260206_AC_HOPE_ViT.md  20260206_HOPE_ Self-Referential Learning Module.md  20260206_HOPE_Implementation_Review.md  20260206_HOPE_gradient_flow_fix_protocol.md  20260206_mathematics_for_HOPE.md  20260209_AC_HOPE_ViT_debugging_protocol.md  20260209_HOPE_paper_alignment_implementation.md  20260209_HOPE_training_settings_evaluation.md  20260209_More_Infos_from_Titans_TTT_Paper.md  20260215_identity_baseline.md  20260220_L1_vs_L2_Loss.md  20260221_Freezing_HOPE?.md  20260221_L1_vs_L2_Loss.md  20260221_Rollout zu Jump Prediction_ Scientific Plan.md  20260222_Full_CL_Pipeline.md  20260222_evaluation_rollout_to_jump_prediction.md  20260222_lower_and_upper_Bound_Baselines.md  20260222_rollout_to_jump_prediction_migration.md  20260225_Antworten_End_February.md  20260225_cl_experiment_coverage_analysis.md  20260226_ac_hope_hyperparameter_review.md  20260226_ac_hope_vs_lower_bound_comparison.md  20260226_ac_vit_lower_bound_naive_exp_sum.md  20260226_cl_ac_hope_exp_summary.md  20260226_experiment_prioritization_analysis.md  20260227_phase2_nan_fix_aux_loss_detach.md  20260227_phase2_nan_three_level_gradient_defense.md  20260227_summary_naive_versus_hope_vs_upper.md  20260228_experiments_results.md  20260228_feature_maps_task_correlation_insights.md  20260228_plasticity_analysis.md  20260301_cms_frame_aware_scheduling_plan.md  20260301_phase4_implementation_summary.md  20260301_phase5_architectural_fixes.md  (+37 more)
src/: __init__.py  cl_benchmark_train.py  cl_train.py  eval.py  flops_profiler.py  train.py
tests/: conftest.py  test_ac_predictor.py  test_cl_metrics.py  test_cms_frame_scheduling.py  test_datamodule.py  test_hope_gradient_flow.py  test_phase11_dnh.py  test_phase5_fixes.py  test_phase6_longterm_memory.py  test_phase7_enhanced_longterm.py  test_phase8_hybrid.py
tmp/: test_hope.py
(+112 files in other folders)
